[package]
name = "theme-listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.169"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"

[target.'cfg(target_os="linux")'.dependencies]
dbus = "0.9.7"

[target.'cfg(target_os="macos")'.dependencies]
objc2 = "0.6.0"
objc2-app-kit = "0.3.0"
objc2-foundation = "0.3.0"

